--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chec/commerce.js": "^2.8.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vuetify": "^2.6.0"
   },
