--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-router": "^2.8.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
