--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-router": "^2.8.1",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
